; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_ioctl.c_ksys_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_ioctl.c_ksys_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }

@EBADF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ksys_ioctl(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.fd, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @fdget(i32 %10)
  %12 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* @EBADF, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %4, align 4
  br label %39

19:                                               ; preds = %3
  %20 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i64, i64* %7, align 8
  %24 = call i32 @security_file_ioctl(i32 %21, i32 %22, i64 %23)
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %34, label %27

27:                                               ; preds = %19
  %28 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @do_vfs_ioctl(i32 %29, i32 %30, i32 %31, i64 %32)
  store i32 %33, i32* %8, align 4
  br label %34

34:                                               ; preds = %27, %19
  %35 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @fdput(i32 %36)
  %38 = load i32, i32* %8, align 4
  store i32 %38, i32* %4, align 4
  br label %39

39:                                               ; preds = %34, %16
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @fdget(i32) #1

declare dso_local i32 @security_file_ioctl(i32, i32, i64) #1

declare dso_local i32 @do_vfs_ioctl(i32, i32, i32, i64) #1

declare dso_local i32 @fdput(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
